--- a/pom.xml
+++ b/pom.xml
@@ -99,11 +99,11 @@
 			<scope>runtime</scope>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>org.json</groupId>-->
-<!--			<artifactId>json</artifactId>-->
-<!--			<version>20210307</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20210307</version>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.razorpay/razorpay-java -->
 		<dependency>
